[package]
name = "gps-ble-receiver"
version = "0.1.0"
authors = ["udj13 <shlyagin@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4.22", default-features = false }
esp-idf-svc = { version = "0.49.1", default-features = false }
config = "0.14.0"
anyhow = "1.0.86"

esp-idf-hal = "0.44.1"

# https://crates.io/crates/esp32-nimble
esp32-nimble = "0.7.0"


esp-idf-sys = "0.35.0"
colored = "2.1.0"

embedded-svc = "0.28.0"

[build-dependencies]
embuild = "0.32.0"
