[package]
name = "gps-ble-receiver"
version = "0.1.0"
authors = ["udj13 <shlyagin@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "gps-ble-receiver"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

#default = ["std", "embassy", "esp-idf-svc/native"]
#pio = ["esp-idf-svc/pio"]
#std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
#alloc = ["esp-idf-svc/alloc"]
#nightly = ["esp-idf-svc/nightly"]
#embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = "0.4"
#esp-idf-svc = { version = "0.49.1", default-features = false }
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# config = "0.14.0"
# anyhow = "1.0.86"

esp-idf-hal = "0.45"

# https://crates.io/crates/esp32-nimble
esp32-nimble = "0.11.0"


esp-idf-sys = "0.36.0"
colored = "2.1.0"

embedded-svc = "0.28"

[build-dependencies]
embuild = "0.33"